--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -168,8 +168,8 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <h1>Declaration and Signature</h1>
-                            <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
-                            <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                            <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+                            <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                                 <label class="switch">
                                 <input class="togglesavemore" type="checkbox">
                                 <span class="slider uppercase"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
@@ -434,7 +434,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 form-group form-group-md indentctr">
-                                                            <p class="weight600">Read the following statements before signing. Acknowledge the statements by checking the boxes and signing below. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p> 
+                                                            <p class="weight600">Read the following statements before signing. Acknowledge the statements by checking the boxes and signing below. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p> 
                                                        		<div class="row">
                                                                 <div class="col-xs-12 form-group form-group-md">		
                                                                     <input class="form-check-input checkmark" type="checkbox" value="court" tabindex="0" aria-labelledby="courtdecree" id="courtd">
@@ -475,16 +475,16 @@
                                                             <div class="row">
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
                                                                 	<p class="sr-only">Enclose the signature in forward slashes</p>
-                                                                    <label for="signature"><span class="weight600">&#42;</span> Signature</label>
+                                                                    <label for="signature">Signature <span class="weight600">&#42;</span></label>
                                                                     <input type="text" class="form-control" placeholder="/Signature/" id="signature" required>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
                                                                     <p class="sr-only">Enter the date in the following format: 20:36:14 May 30, 2019 E.T.</p>
-                                                                    <label for="datesigned">Date Signed <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
+                                                                    <label for="datesigned">Date Signed <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                                     <textarea type="text" rows="2" class="form-control" placeholder="20:36:14 May 30, 2019 E.T." id="datesigned"></textarea>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
-                                                                    <label for="signatoryname"><span class="weight600">&#42;</span> Signatory&#8217;s Name</label>
+                                                                    <label for="signatoryname">Signatory&#8217;s Name <span class="weight600">&#42;</span></label>
                                                                     <input type="text" class="form-control" id="signatoryname" required>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-9 col-lg-6">
@@ -492,7 +492,7 @@
                                                                     <input type="text" class="form-control" id="signatoryphone">
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
-                                                                    <label for="signatoryposition"><span class="weight600">&#42;</span> Signatory&#8217;s Position</label>
+                                                                    <label for="signatoryposition">Signatory&#8217;s Position <span class="weight600">&#42;</span></label>
                                                                     <input type="text" class="form-control" id="signatoryposition" required>
                                                                 </div>
                                                             </div><!--end checkbox row-->
@@ -509,7 +509,7 @@
                 </div><!--END row-->                    
             </div>
           </div><!--END row-->
-          <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+          <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
             <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
             </div>
