--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -167,8 +167,8 @@
                 </div>
                 <h1>Trademark Details &#8211; Design with Text</h1>
                 <p class="required"><span class="weight600">&#42; = Required</span></p>
-                <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
-                <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+                <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                     <label class="switch">
                     <input class="togglesavemore" type="checkbox">
                     <span class="slider uppercase"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
@@ -185,7 +185,7 @@
                            <fieldset>
                            	<div class="row">
                                 <div class="form-group form-group-md col-xs-12">
-                                    <p class="required weight600" aria-level="3"><span class="weight600">&#42;</span> Mark Literal</p>
+                                    <p class="required weight600" aria-level="3">Mark Literal <span class="weight600">&#42;</span></p>
                                     <label for="ta2">Enter the words, letters and numbers appearing in the mark. <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label> 
                                     <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                         <div class="row">
@@ -208,10 +208,10 @@
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescolorclaim"><!--toggle 'yes' radio-->
-                                                            <label for="ta3" class="save">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label> 
+                                                            <label for="ta3" class="save">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label> 
                                                             <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600">Mark Description</h3>
-                                                            <label for="ta2" class="save">Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>  
+                                                            <label for="ta2" class="save">Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>  
                                                             <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                         <div id="nocolorclaim" class="form-group form-group-md"><!--toggle 'no' radio-->
@@ -223,7 +223,7 @@
                                                               Submitting a color drawing with no claim to color could result in a refusal and delay the examination process.
                                                             </div>
                                                             <h3 class="weight600">Mark Description</h3>
-                                                            <label for="ta5"><span class="weight600">&#42;</span> Provide a description of the mark.</label>  
+                                                            <label for="ta5">Provide a description of the mark. <span class="weight600">&#42;</span></label>  
                                                             <textarea id="ta5" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                     </div>
@@ -251,7 +251,7 @@
                                                             <label for="inlineRadio4" class="radio-inline radiocontainer">No<input type="radio" name="foreignradio" id="inlineRadio4" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yestranslation"><!--toggle 'yes' radio-->
-                                                            <h3 class="weight600">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
+                                                            <h3 class="weight600">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                             <div class="row">
                                                                 <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                     <label for="language">Language</label>
@@ -296,7 +296,7 @@
                                                           <label for="inlineRadio6" class="radio-inline radiocontainer">No<input type="radio" name="nonlatradio" id="inlineRadio6" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yestransliteration"><!--toggle 'yes' radio-->
-                                                            <h3 class="weight600">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
+                                                            <h3 class="weight600">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                             <div class="row">
                                                                 <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                     <label for="languagetranslit">Language</label>
@@ -345,10 +345,10 @@
                                                         	<p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
-                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
-                                                            <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
-                                                            	<div class="row">
-                                                                	<div class="containsaname col-xs-12">
+                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                                            <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
+                                                             	<div class="containsaname col-xs-12">
+                                                                    <div class="row">
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                                                             <label for="firstname">First Name</label>
                                                                             <input type="text" class="form-control" id="firstname">
@@ -375,9 +375,9 @@
                                                             </div>
                                                             <input class="form-check-input checkmark" type="checkbox" value="portrait" tabindex="0" id="portraitchecked" aria-labelledby="checkportrait">
                                                             <label class="form-check-label form-check" for="portraitchecked" id="checkportrait"><span class="radio notspecial" id="collect">Portrait</span></label>
-                                                            <div id="yescontainsportrait" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
-                                                            	<div class="row">
-                                                                	<div class="containsaportrait col-xs-12">
+                                                            <div id="yescontainsportrait" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
+                                                              	<div class="containsaportrait col-xs-12">
+                                                                    <div class="row">
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                                                             <label for="firstname">First Name</label>
                                                                             <input type="text" class="form-control" id="firstname">
@@ -404,9 +404,9 @@
                                                             </div>
                                                             <input class="form-check-input checkmark" type="checkbox" value="signature" tabindex="0" aria-labelledby="checksignature" id="signaturechecked">
                                                             <label class="form-check-label form-check" for="signaturechecked" id="checksignature"><span class="radio notspecial" id="collectm">Signature</span></label>
-                                                            <div id="yescontainssignature" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
-                                                            	<div class="row">
-                                                                    <div class="containsasignature col-xs-12">
+                                                            <div id="yescontainssignature" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
+                                                             	<div class="containsasignature col-xs-12">
+                                                                    <div class="row">
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                                                             <label for="firstname">First Name</label>
                                                                             <input type="text" class="form-control" id="firstname">
@@ -476,7 +476,7 @@
                 </div><!--END row-->                    
        		</div>
           </div><!--END row-->
-          <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+          <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
             <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
             </div>
