--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -176,7 +176,7 @@
                                             <p>Trademarks and service marks: Are generally words, symbols, designs, or combinations of these. Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers. Trademarks are for goods, which are physical things that are sold to others, like shoes. Service marks are for services that are provided to others, like tax preparation services.</p>
                                         </div>
                                     </div>
-                                    <p id="typemark"><span class="weight600">&#42;</span> What type of mark are you applying for? <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="Trademarks and service marks: Are generally words, symbols, designs, or combinations of these. Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers. Trademarks are for goods, which are physical things that are sold to others, like shoes.  Service marks are for services that are provided to others, like tax preparation services."></a></p>
+                                    <p id="typemark">What type of mark are you applying for? <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="Trademarks and service marks: Are generally words, symbols, designs, or combinations of these. Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers. Trademarks are for goods, which are physical things that are sold to others, like shoes.  Service marks are for services that are provided to others, like tax preparation services."></a></p>
                                <fieldset>
                                     <legend>Select the type of mark you are applying for</legend>
                                     <div><!-- Button trigger modal -->
@@ -188,7 +188,7 @@
                                     </div>
                                     <div id="markoptions" class="collapse Accordion-panel" role="region" aria-labelledby="optionsbtn">
                                         <div class="Accordion form-group form-group-md">
-                                        	<p><span class="weight600">&#42;</span> Which of the following types best describes the mark you want to apply for?</p>
+                                        	<p>Which of the following types best describes the mark you want to apply for? <span class="weight600">&#42;</span></p>
                                             <input class="form-check-input checkmark" type="checkbox" value="Certification" tabindex="0" aria-labelledby="certificationcheck" id="certcheck">
                                             <label class="form-check-label form-check hasinfo" for="certcheck" id="certcheck2"><span class="radio notspecial" id="certificationcheck">Certification</span></label><a href="#" data-toggle="modal" data-target="#tradeservmodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about certification marks"></span></a>
                                             <!-- Modal -->
@@ -563,7 +563,7 @@
                         	</div><!--END row-->
                     	</div><!--END panels row-->
                   	</div>
-                    <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+                    <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                         </div>
