--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -165,8 +165,8 @@
                 </div>
                 <h1>Trademark Details &#8211; Standard Character</h1>
                 <p class="required"><span class="weight600">&#42; = Required</span></p>
-                <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
-                <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+                <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                     <label class="switch">
                         <input class="togglesavemore" type="checkbox">
                         <span class="slider uppercase">
@@ -188,7 +188,7 @@
                                         <div class="row">
                                             <section aria-label="mark text">
                                             	<div class="col-xs-12">
-                                                	<p><span class="required weight600">&#42;</span> Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set">USPTO standard character set</a>.</p>
+                                                	<p>Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set">USPTO standard character set</a>. <span class="required weight600">&#42;</span></p>
                                                 </div>
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md" id="entertext">
                                                     <label for="ta2" class="sr-only">Enter mark text</label> 
@@ -224,7 +224,7 @@
                                                         <div id="yestranslation" aria-labelledby="translate"><!--toggle 'yes' radio-->
                                                             <div class="row">
                                                                 <div class="col-xs-12 form-group form-group-md holdsatranslate">
-                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
+                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                                     <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                         <label for="language">Language</label>
                                                                         <select class="form-control" id="language">
@@ -283,7 +283,7 @@
                                                             <p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
-                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
+                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
                                                                 <div class="row">
                                                                     <div class="containsaname col-xs-12">
@@ -416,7 +416,7 @@
                         </form> 
                     </div><!--END col-->
                 </div><!--END row-->                    
-              <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+              <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                 </div>
