--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -165,8 +165,8 @@
                 </div>
                 <h1>Trademark Details &#8211; Stylized</h1>
                 <p class="required"><span class="weight600">&#42; = Required</span></p>
-                <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
-                <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+                <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                     <label class="switch">
                     <input class="togglesavemore" type="checkbox">
                     <span class="slider uppercase"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
@@ -182,7 +182,7 @@
                            <fieldset>
                            	<div class="row">
                             	<div class="col-xs-12" >
-                                  <p id="typemark"><span class="weight600">&#42;</span> Upload a file containing your mark.</p>						
+                                  <p id="typemark">Upload a file containing your mark. <span class="weight600">&#42;</span></p>						
                                     <!--Start Dropzone-->
                                   <div class="col-xs-12 form-group form-group-md">
                                         <div class="form-group form-group-md hidethis">
@@ -208,7 +208,7 @@
                                 </div>
                                 <div class="form-group form-group-md col-xs-12">
                                     <p class="weight600" role="heading" aria-level="3">Mark Literal</p>
-                                    <label for="ta2"><span class="required weight600">&#42;</span>Enter the words, letters and numbers appearing in the mark. <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label> 
+                                    <label for="ta2">Enter the words, letters and numbers appearing in the mark. <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label> 
                                     <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                         <div class="row">
                                             <div class="col-sm-12">
@@ -230,9 +230,9 @@
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescolorclaim"><!--toggle 'yes' radio-->
-                                                            <label for="ta3">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>                                                            <textarea id="ta3" rows="3" class="form-control"></textarea>
+                                                            <label for="ta3">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>                                                            <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600 form-group form-group-md">Mark Description</h3>
-                                                            <label for="ta2"><span class="weight600">&#42;</span> Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>  
+                                                            <label for="ta2">Enter the description of the mark including the location of the colors. <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>  
                                                             <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                         <div id="nocolorclaim" class="form-group form-group-md"><!--toggle 'no' radio-->
@@ -244,7 +244,7 @@
                                                               Submitting a color drawing with no claim to color could result in a refusal and delay the examination process.
                                                             </div>
                                                             <h3 class="weight600">Mark Description</h3>
-                                                            <label for="ta5"><span class="weight600">&#42;</span> Provide a description of the mark.</label>  
+                                                            <label for="ta5">Provide a description of the mark. <span class="weight600">&#42;</span></label>  
                                                             <textarea id="ta5" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                     </div>
@@ -273,7 +273,7 @@
                                                         <div id="yestranslation" aria-labelledby="translate"><!--toggle 'yes' radio-->
                                                             <div class="row">
                                                             	<div class="col-xs-12 form-group form-group-md holdsatranslate">
-                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
+                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                                     <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                         <label for="language">Language</label>
                                                                         <select class="form-control" id="language">
@@ -331,7 +331,7 @@
                                                         <div id="yestransliteration" aria-labelledby="translitp"><!--toggle 'yes' radio-->
                                                         <div class="row">
                                                           	<div class="col-xs-12 form-group form-group-md holdsatransliterate">
-                                                                    <h3 class="weight600" id="translitp">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
+                                                                    <h3 class="weight600" id="translitp">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                                     <div class="row">
                                                                         <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                             <label for="languagetranslit">Language</label>
@@ -393,7 +393,7 @@
                                                         	<p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
-                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
+                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
                                                             	<div class="row">
                                                                 	<div class="containsaname col-xs-12">
@@ -528,7 +528,7 @@
                         </form> 
                     </div><!--END col-->
                 </div><!--END row-->                    
-              <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+              <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                 </div>
