--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -172,8 +172,8 @@
                         </div>
                     </div>
                     <p class="required"><span class="weight600">&#42; = Required</span></p>
-                    <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
-                    <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                    <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+                    <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                         <label class="switch">
                         <input class="togglesavemore" type="checkbox">
                         <span class="slider uppercase"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
@@ -206,7 +206,7 @@
                                         <fieldset aria-labelledby="entitytype">
                                             <div class="row">
                                               <div class="form-group form-group-md col-xs-6">
-                                                <label for="entype">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
+                                                <label for="entype">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                 <select class="form-control" id="entype">
                                                   <option value="Select">Select</option>
                                                   <option value="individual">Individual</option>
@@ -249,7 +249,7 @@
                                               <div class="form-group form-group-md col-xs-6" id="switchselect">
                                               	<div class="row">
                                                     <div class="col-xs-12 albaniaform">
-                                                        <label for="entypeforeignalbania">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
+                                                        <label for="entypeforeignalbania">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignalbania">
                                                           <option value="Select">Select</option>
                                                           <option value="jointstock">Joint Stock Company</option>
@@ -257,7 +257,7 @@
                                                         </select>
                                                     </div>
                                                     <div class="col-xs-12 algeriaform">
-                                                        <label for="entypeforeignalgeria">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
+                                                        <label for="entypeforeignalgeria">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignalgeria">
                                                           <option value="Select">Select</option>
                                                           <option value="jointstock">Joint Stock Company</option>
@@ -268,7 +268,7 @@
                                                         </select>
                                                     </div>
                                                     <div class="col-xs-12 angolaform">
-                                                        <label for="entypeforeignangola">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
+                                                        <label for="entypeforeignangola">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignalgeria">
                                                           <option value="Select">Select</option>
                                                           <option value="jointstock">Joint Stock Company</option>
@@ -279,7 +279,7 @@
                                                         </select>
                                                     </div>
                                                     <div class="col-xs-12 bahamasform">
-                                                        <label for="entypeforeignbahamas">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
+                                                        <label for="entypeforeignbahamas">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignbahamas">
                                                           <option value="Select">Select</option>
                                                           <option value="soleforeign">Sole Proprietorship</option>
@@ -311,7 +311,7 @@
                     </div>
                 </div>
             </div>
-            <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+            <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                 </div>
