--- a/user_profile.html
+++ b/user_profile.html
@@ -107,7 +107,7 @@
                             <fieldset aria-labelledby="accountinfo">
                                 <div class="row">
                                   <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                    <label for="firstname"><span class="weight600">&#42;</span>First Name</label>
+                                    <label for="firstname">First Name <span class="weight600">&#42;</span></label>
                                     <input type="text" class="form-control" id="firstname" required>
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-3">
@@ -115,7 +115,7 @@
                                     <input type="text" class="form-control" id="middlename">
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
-                                    <label for="lastname"><span class="weight600">&#42;</span>Last Name</label>
+                                    <label for="lastname">Last Name <span class="weight600">&#42;</span></label>
                                     <input type="text" class="form-control" id="lastname" required>
                                   </div>
                                   <div class="form-group form-group-md col-xs-4">
@@ -143,7 +143,7 @@
                        	<fieldset aria-labelledby="contactinfo">
                           	<div class="row">
                                 <div class="form-group form-group-md col-xs-12 col-lg-6">
-                                    <label for="countryterritory"><span class="weight600">&#42;</span>Country/US Territory</label>
+                                    <label for="countryterritory">Country/US Territory <span class="weight600">&#42;</span></label>
                                     <select class="form-control" id="countryterritory" required>
                                         <option value="1">UNITED STATES OF AMERICA</option>
                                         <option value="B2">AFGHANISTAN</option>
@@ -387,7 +387,7 @@
                                 	</select>
                                 </div>
                                 <div class="form-group form-group-md col-xs-12 col-lg-8">
-                                    <label for="addressline1"><span class="weight600">&#42;</span>Address Line 1</label>
+                                    <label for="addressline1">Address Line 1 <span class="weight600">&#42;</span></label>
                                     <input type="text" class="form-control" id="addressline1" required>
                                 </div>
                                 <div class="form-group form-group-md col-xs-12 col-lg-8">
@@ -399,15 +399,15 @@
                                     <input type="text" class="form-control" id="addressline3">
                                 </div>
                                 <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
-                                    <label for="city"><span class="weight600">&#42;</span>City</label>
+                                    <label for="city">City <span class="weight600">&#42;</span></label>
                                     <input type="text" class="form-control" id="city" required>
                                 </div>
                                 <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                    <label for="stateprovinceterritory"><span class="weight600">&#42;</span>State/Province/Territory</label>
+                                    <label for="stateprovinceterritory">State/Province/Territory <span class="weight600">&#42;</span></label>
                                     <input type="text" class="form-control" id="stateprovinceterritory" required>
                                 </div>
                                 <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-3">
-                                    <label for="zipcode"><span class="weight600">&#42;</span>Zip/Postal Code</label>
+                                    <label for="zipcode">Zip/Postal Code <span class="weight600">&#42;</span></label>
                                     <input type="text" class="form-control" id="zipcode" placeholder="XXXXX" required>
                                 </div>
                                 <div class="form-group form-group-md col-xs-12 col-md-6">
@@ -440,7 +440,7 @@
                                     </div>
                                 </div>
                                 <div class="appendphones"></div>
-                                <div class="col-xs-12" aria-label="add additional phone number">
+                                <div class="form-group form-group-md col-xs-12" aria-label="add additional phone number">
                                     <div class="row">
                                         <div class="inlinebuttons btn-group btn-group-justified">
                                             <div class="btn-group col-xs-6">
@@ -510,7 +510,7 @@
                                                     		<h4 class="modal-title" id="changemail">Change Security Questions</h4>
                                                   		</div>
                                                   		<div class="modal-body">
-                                                        	<label for="questionone"><span class="weight600">&#42;</span>Question 1</label>
+                                                        	<label for="questionone">Question 1 <span class="weight600">&#42;</span></label>
                                                             <select class="form-control" id="questionone" required>
                                                                 <option value="1">Select a Question</option>
                                                                 <option value="question1">What was your first car?</option>
@@ -519,7 +519,7 @@
                                                             </select>
                                                     		<label for="answerone">Answer <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="Answer to your security question. This also helps us secure and recover your account."></a></label>
                                     						<input type="text" class="form-control" id="answerone">
-                                                            <label for="questiontwo"><span class="weight600">&#42;</span>Question 2</label>
+                                                            <label for="questiontwo">Question 2 <span class="weight600">&#42;</span></label>
                                                             <select class="form-control" id="questiontwo" required>
                                                                 <option value="1">Select a Question</option>
                                                                 <option value="question1">What was your first car?</option>
@@ -623,7 +623,7 @@
                                         <div class="panel panel-default">
                                             <div class="panel-heading">
                                                 <div class="col-xs-12">
-                                                    <label for="inlineRadio048" class="radio-inline radiocontainer special"><h3 class="panel-title number">Code Generator <span>(Mobile app)</span></h3><input type="radio" name="twostepauthentication" id="inlineRadio048" value="" tabindex="0" disabled aria-disabled="true"><span class="checkmark"></span></label>
+                                                    <label for="inlineRadio048" class="radio-inline radiocontainer special disabled"><h3 class="panel-title number">Code Generator <span>(Mobile app)</span></h3><input type="radio" name="twostepauthentication" id="inlineRadio048" value="" tabindex="0" disabled aria-disabled="true"><span class="checkmark"></span></label>
                                                 </div>
                                             </div>
                                             <div class="panel-body col-xs-12 email">
@@ -647,7 +647,7 @@
                                         <div class="panel panel-default">
                                             <div class="panel-heading">
                                                 <div class="col-xs-12">
-                                                    <label for="inlineRadio049" class="radio-inline radiocontainer special"><h3 class="panel-title number email">Phone Call</h3><input type="radio" name="twostepauthentication" id="inlineRadio049" value="" tabindex="0" disabled aria-disabled="true"><span class="checkmark"></span></label>
+                                                    <label for="inlineRadio049" class="radio-inline radiocontainer special disabled"><h3 class="panel-title number email">Phone Call</h3><input type="radio" name="twostepauthentication" id="inlineRadio049" value="" tabindex="0" disabled aria-disabled="true"><span class="checkmark"></span></label>
                                                 </div>
                                             </div>
                                             <div class="panel-body col-xs-12 email">
@@ -679,13 +679,13 @@
                         <fieldset aria-labelledby="view">
                         	<div role="radiogroup" aria-labelledby="color" class="form-group form-group-md" >
                                 <label for="inlineRadio050" class="form-group form-group-md radiocontainer">Guided User View<input type="radio" name="view" id="inlineRadio050" value="yes" tabindex="0"><span class="checkmark"></span></label>
-                                <label for="inlineRadio051" class="form-group form-group-md radiocontainer special">Experienced User View<input type="radio" name="view" id="inlineRadio051" value="no" tabindex="0" disabled aria-disabled="true"><span class="checkmark"></span></label>
+                                <label for="inlineRadio051" class="form-group form-group-md radiocontainer special disabled">Experienced User View<input type="radio" name="view" id="inlineRadio051" value="no" tabindex="0" disabled aria-disabled="true"><span class="checkmark"></span></label>
                             </div><!--END radiogroup-->
                         </fieldset>
                        </form><!--END Additional Information Form-->
                 	</div><!--END Content Div-->
                   </div>
-                  <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+                  <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                     <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                     </div>
