--- a/create_account.html
+++ b/create_account.html
@@ -102,13 +102,13 @@
                             <fieldset aria-label="enter account details">
                                 <div class="row">
                                   <div class="form-group form-group-md col-xs-12 col-md-6">
-                                      <label for="email"><span class="weight600">&#42;</span>Email Address <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
+                                      <label for="email">Email Address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
                                       <input type="text" class="form-control" id="email" required>
                                   </div>
                                 </div>
                                 <div class="row">
                                     <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                        <label for="firstname"><span class="weight600">&#42;</span>First Name</label>
+                                        <label for="firstname">First Name <span class="weight600">&#42;</span></label>
                                         <input type="text" class="form-control" id="firstname" required>
                                     </div>
                                     <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-3">
@@ -116,7 +116,7 @@
                                         <input type="text" class="form-control" id="middlename">
                                     </div>
                                     <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
-                                        <label for="lastname"><span class="weight600">&#42;</span>Last Name</label>
+                                        <label for="lastname">Last Name <span class="weight600">&#42;</span></label>
                                         <input type="text" class="form-control" id="lastname" required>
                                     </div>
                                     <div class="form-group form-group-md col-xs-4">
@@ -138,11 +138,11 @@
                                 </div>
                                 <div class="row">
                                     <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-6">
-                                        <label for="password"><span class="weight600">&#42;</span>Password</label>
+                                        <label for="password">Password <span class="weight600">&#42;</span></label>
                                         <input type="text" class="form-control" id="password" required>
                                     </div>
                                     <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-6">
-                                        <label for="confirmpassword"><span class="weight600">&#42;</span>Confirm Password</label>
+                                        <label for="confirmpassword">Confirm Password <span class="weight600">&#42;</span></label>
                                         <input type="text" class="form-control" id="confirmpassword" required>
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                         </form><!--END Additional Information Form-->
                     </div><!--END Content Div-->
                   </div>
-                  <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+                  <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                     <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                     </div>
