--- a/goods_and_services_table_M5.html
+++ b/goods_and_services_table_M5.html
@@ -3075,7 +3075,7 @@
                     </div><!--END Content Div-->
                 </div>
             </div>
-            <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+            <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                 </div>
