--- a/goods_and_services_video_M1.html
+++ b/goods_and_services_video_M1.html
@@ -181,7 +181,7 @@
                                   <label for="searchmanual" class="radio-inline radiocontainer">Search ID Manual for Goods and Service<input type="radio" name="selectgs" id="searchmanual" value="searchman" tabindex="0"><span class="checkmark"></span></label>
                                 </div>
                                 <div class="radio">
-                                  <label for="provideown" class="radio-inline radiocontainer disabled">Provide Own Goods and Services<input type="radio" name="selectgs" id="provideown" value="provide" tabindex="0" disabled><span class="checkmark"></span></label>
+                                  <label for="provideown" class="radio-inline radiocontainer disabled special">Provide Own Goods and Services<input type="radio" name="selectgs" id="provideown" value="provide" tabindex="0" disabled><span class="checkmark"></span></label>
                                 </div>
                             </div><!--END radiogroup-->
 						</div>
@@ -189,7 +189,7 @@
             	</div>
            	</div>
             
-            <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+            <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                 </div>
