--- a/marks_design_with_text_M3.html
+++ b/marks_design_with_text_M3.html
@@ -174,33 +174,35 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12" >
-                                      <p id="typemark"><span class="weight600">&#42;</span> Upload a file containing your mark.</p>						
+                                      <p id="typemark">Upload a file containing your mark. <span class="weight600">&#42;</span></p>						
                                         <!--Start Dropzone-->
-                                      <div class="col-xs-12 form-group form-group-md">
-                                        <form action="" method="post" enctype="multipart/form-data" aria-labelledby="markinfo">
-                                            <fieldset>
-                                                <legend class="sr-only"><span>File upload</span></legend>
-                                                <div class="form-group form-group-md hidethis">
-                                                    <label class="small upload-drop-zone" for="file"><div id="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                    <input type="file" id="file" name="file" class="form-control">
-                                                </div>
-                                                <div class="row">
-                                                    <div class="js-upload-finished col-xs-12">
-                                                        <p id="uploadedfile">Selected files</p>
-                                                        <div class="list-group" id="filedata">
-                                                            <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
+                                      <div class="row">
+                                          <div class="col-xs-12 form-group form-group-md">
+                                            <form action="" method="post" enctype="multipart/form-data" aria-labelledby="markinfo">
+                                                <fieldset>
+                                                    <legend class="sr-only"><span>File upload</span></legend>
+                                                    <div class="form-group form-group-md hidethis">
+                                                        <label class="small upload-drop-zone" for="file"><div id="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
+                                                        <input type="file" id="file" name="file" class="form-control">
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="js-upload-finished col-xs-12">
+                                                            <p id="uploadedfile">Selected files</p>
+                                                            <div class="list-group" id="filedata">
+                                                                <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
+                                                            </div>
                                                         </div>
                                                     </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col-xs-12">
-                                                        <div class="col-xs-12 form-group form-group-md">
-                                                            <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected images">Submit</button>
+                                                    <div class="row">
+                                                        <div class="col-xs-12">
+                                                            <div class="col-xs-12 form-group form-group-md">
+                                                                <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected images">Submit</button>
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                </div><!-- Drop Zone -->
-                                            </fieldset>
-                                        </form>
+                                                    </div><!-- Drop Zone -->
+                                                </fieldset>
+                                            </form>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -210,7 +212,7 @@
             	</div>
             </div>
             <!--END row-->
-              <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+              <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                 </div>
