--- a/owner_info_review.html
+++ b/owner_info_review.html
@@ -546,7 +546,7 @@
                 </div><!--END row-->                    
             </div>
           </div><!--END row-->
-          <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+          <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
             <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
             </div>
