--- a/payment.html
+++ b/payment.html
@@ -264,7 +264,8 @@
                                                                         <img src="images/discover.jpg" alt="Visa accepted">
                                                                 	</div>
                                                                     <div class="imagefloat">
-                                                                        <img src="images/amex.jpg" alt="Visa accepted">                                                                	</div>
+                                                                        <img src="images/amex.jpg" alt="Visa accepted">                                                                	
+                                                                    </div>
                                                                     <br clear="all">
                                                                 </div>
                                                             </div>
@@ -633,7 +634,7 @@
                     </div><!--END row-->                    
                 </div>
               </div><!--END row-->
-              <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+              <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
                 </div>
